--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
           </a>
         </div>
       </div>
+      
+      <div>
+        <p class="disclaimer">
+          © 2025 by Marcus Garim. made with MEDIA LIST STUDIO™
+        </p>
+      </div>
+    
     </section>
   </div>
   <script src="app.js"></script>
