--- a/index.html
+++ b/index.html
@@ -3,25 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N89TJ4L3');</script>
   <title>Marcus Garim</title>
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" type="image/png" src="images/Icon.png" alt="Icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N89TJ4L3"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
   <div class="layout">
-    
     <!-- Área de perfil - 35% -->
     <aside class="profile">
       <img src="images/Avatar.png" alt="Marcus Garim">
       <h1 class="title">Marcus Garim</h1>
       <p class="subtitle">Strategic Designer & Software Engineering</p>
       <p class="description">
-        Com mais de 7 anos de experiência no Design, explorei diversas áreas dentro desse segmento. Essa bagagem me permite desenvolver uma visão abrangente e aprofundada, me capacitando para resolver problemas complexos para empresas e marcas por meio da inteligência criativa e do branding estratégico. Além do domínio em comunicação visual e inteligência criativa, possuo uma especialização verticalizada na criação de identidades de marca.
+        Com mais de 7 anos de experiência no Design, atuei em diversas frentes dentro do segmento, desenvolvendo uma visão abrangente e estratégica, me capacitando para resolver problemas complexos para empresas e marcas por meio da inteligência criativa e do branding estratégico. Além do domínio em comunicação visual e inteligência criativa, possuo uma especialização verticalizada na criação de identidades de marca.
         <br><br>
-        Ao longo da minha carreira tive o privilégio de contribuir em projetos de marcas como Grupo RBS, Grupo Zaffari, XP Inc., Pompéia e Gang, além de já ter atendido mais de 200 empresas dos mais diversos segmentos. Atualmente estou alocado na Unidade de Negócio de Marketing da maior Investech da América Latina. Paralelamente, atuo como freelancer, exercendo o papel de Designer de Marcas, oferecendo soluções criativas e estratégicas para empresas.
+        Ao longo da minha carreira tive o privilégio de contribuir em projetos de marcas como Grupo RBS, Grupo Zaffari, XP Inc., Pompéia e Gang, além de já ter atendido mais de 200 empresas dos mais diversos segmentos, também atuei como freelancer, exercendo o papel de Designer de Marcas, oferecendo soluções criativas e estratégicas grandes para empresas. Atualmente estou alocado na Unidade de Negócio de Marketing da maior Investech da América Latina.
         <br><br>
-        Depois de percorrer uma longa jornada com Design, estou migrando para a carreira em tech, graduando em Análise e Desenvolvimento de Sistemas pela PUCRS e aluno de Python no Instituto Caldeira. Percebi cedo a importância do meu desenvolvimento, acumulando mais de 1800 horas em certificações extracurriculares. Além disso, estou me aprofundando no estudo de linguagens de programação e frameworks para desenvolvimento de software e engenharia de dados.
+        Após uma jornada sólida no Design, iniciei minha transição para a área de tecnologia, com foco em desenvolvimento de software. Sou graduando em Análise e Desenvolvimento de Sistemas pela PUCRS e aluno de Python no Instituto Caldeira. Estou me aprofundando no estudo de linguagens de programação e frameworks para desenvolvimento de software e engenharia de dados. Além disso, desde cedo, entendi a importância do aprendizado contínuo, acumulando mais de 1800 horas em certificações extracurriculares. 
       </p>
     </aside>
 
