--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +13,10 @@
   <title>Marcus Garim</title>
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="shortcut icon" type="image/png" src="images/Icon.png" alt="Icon">
+  <link rel="shortcut icon" type="image/png" href="images/Icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N89TJ4L3"
@@ -34,7 +36,6 @@
         Após uma jornada sólida no Design, iniciei minha transição para a área de tecnologia, com foco em desenvolvimento de software. Sou graduando em Análise e Desenvolvimento de Sistemas pela PUCRS e aluno de Python no Instituto Caldeira. Estou me aprofundando no estudo de linguagens de programação e frameworks para desenvolvimento de software e engenharia de dados. Além disso, desde cedo, entendi a importância do aprendizado contínuo, acumulando mais de 1800 horas em certificações extracurriculares. 
       </p>
     </aside>
-
     <!-- Área de cards - 65% -->
     <section class="cards">
       <div class="column">
@@ -54,7 +55,6 @@
           </a>
         </div>
       </div>
-
       <div class="column">
         <span class="section-title">design ↓</span>
         <a href="https://marcusgarim.wixstudio.io/marcusgarim" target="_blank" class="card card-portfolio">
@@ -69,7 +69,6 @@
           </a>
         </div>
       </div>
-      
       <div>
         <p class="disclaimer">
           © 2025 by Marcus Garim. made with MEDIA LIST STUDIO™
@@ -79,5 +78,7 @@
     </section>
   </div>
   <script src="app.js"></script>
+
 </body>
+
 </html>
